containeraws: added kubeletConfig
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/containeraws/v1beta2/nodepool.yaml
+++ b/examples-generated/containeraws/v1beta2/nodepool.yaml
@@ -41,6 +41,11 @@ spec:
       - effect: PREFER_NO_SCHEDULE
         key: taint-key
         value: taint-value
+    kubeletConfig:
+    - cpuCfsQuota: true
+      cpuCfsQuotaPeriod: 100ms
+      cpuManagerPolicy: none
+      podPidsLimit: 1024
     location: us-west1
     management:
     - autoRepair: true
