--- a/package/crds/containeraws.gcp.upbound.io_nodepools.yaml
+++ b/package/crds/containeraws.gcp.upbound.io_nodepools.yaml
@@ -1478,6 +1478,27 @@ spec:
                           type: object
                         type: array
                     type: object
+                  kubeletConfig:
+                    description: The kubelet configuration for the node pool.
+                    properties:
+                      cpuCfsQuota:
+                        description: Whether or not to enable CPU CFS quota. Defaults
+                          to true.
+                        type: boolean
+                      cpuCfsQuotaPeriod:
+                        description: Optional. The CPU CFS quota period to use for
+                          the node. Defaults to "100ms".
+                        type: string
+                      cpuManagerPolicy:
+                        description: The CpuManagerPolicy to use for the node. Defaults
+                          to "none".
+                        type: string
+                      podPidsLimit:
+                        description: Optional. The maximum number of PIDs in each
+                          pod running on the node. The limit scales automatically
+                          based on underlying machine size if left unset.
+                        type: number
+                    type: object
                   location:
                     description: The location for the resource
                     type: string
@@ -1709,6 +1730,27 @@ spec:
                               type: string
                           type: object
                         type: array
+                    type: object
+                  kubeletConfig:
+                    description: The kubelet configuration for the node pool.
+                    properties:
+                      cpuCfsQuota:
+                        description: Whether or not to enable CPU CFS quota. Defaults
+                          to true.
+                        type: boolean
+                      cpuCfsQuotaPeriod:
+                        description: Optional. The CPU CFS quota period to use for
+                          the node. Defaults to "100ms".
+                        type: string
+                      cpuManagerPolicy:
+                        description: The CpuManagerPolicy to use for the node. Defaults
+                          to "none".
+                        type: string
+                      podPidsLimit:
+                        description: Optional. The maximum number of PIDs in each
+                          pod running on the node. The limit scales automatically
+                          based on underlying machine size if left unset.
+                        type: number
                     type: object
                   management:
                     description: The Management configuration for this node pool.
@@ -2138,6 +2180,27 @@ spec:
                   id:
                     description: an identifier for the resource with format projects/{{project}}/locations/{{location}}/awsClusters/{{cluster}}/awsNodePools/{{name}}
                     type: string
+                  kubeletConfig:
+                    description: The kubelet configuration for the node pool.
+                    properties:
+                      cpuCfsQuota:
+                        description: Whether or not to enable CPU CFS quota. Defaults
+                          to true.
+                        type: boolean
+                      cpuCfsQuotaPeriod:
+                        description: Optional. The CPU CFS quota period to use for
+                          the node. Defaults to "100ms".
+                        type: string
+                      cpuManagerPolicy:
+                        description: The CpuManagerPolicy to use for the node. Defaults
+                          to "none".
+                        type: string
+                      podPidsLimit:
+                        description: Optional. The maximum number of PIDs in each
+                          pod running on the node. The limit scales automatically
+                          based on underlying machine size if left unset.
+                        type: number
+                    type: object
                   location:
                     description: The location for the resource
                     type: string
