--- a/examples-generated/dialogflowcx/v1beta2/agent.yaml
+++ b/examples-generated/dialogflowcx/v1beta2/agent.yaml
@@ -15,6 +15,18 @@ spec:
       - enabled: true
         finishDigit: '#'
         maxDigits: 1
+      loggingSettings:
+      - enableConsentBasedRedaction: true
+        enableInteractionLogging: true
+        enableStackdriverLogging: true
+      speechSettings:
+      - endpointerSensitivity: 30
+        models:
+          count: "3"
+          mass: 1.3kg
+          name: wrench
+        noSpeechTimeout: 3.500s
+        useTimeoutBasedEndpointing: true
     avatarUri: https://cloud.google.com/_static/images/cloud/icons/favicons/onecloud/super_cloud.png
     defaultLanguageCode: en
     description: Example description.
