dns: Added externalendpoints and healthcheck
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/dns/v1beta1/responsepolicy.yaml
+++ b/examples-generated/dns/v1beta1/responsepolicy.yaml
@@ -86,7 +86,7 @@ spec:
   forProvider:
     defaultSnatStatus:
     - disabled: true
-    deletionProtection: "true"
+    deletionProtection: true
     initialNodeCount: 1
     ipAllocationPolicy:
     - clusterSecondaryRangeName: pod
