gke: doc updates only
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/gke/v1beta2/backupbackupplan.yaml
+++ b/examples-generated/gke/v1beta2/backupbackupplan.yaml
@@ -32,7 +32,7 @@ spec:
     addonsConfig:
     - gkeBackupAgentConfig:
       - enabled: true
-    deletionProtection: "true"
+    deletionProtection: true
     initialNodeCount: 1
     location: us-central1
     networkSelector:
