--- a/package/crds/gkehub.gcp.upbound.io_memberships.yaml
+++ b/package/crds/gkehub.gcp.upbound.io_memberships.yaml
@@ -716,7 +716,7 @@ spec:
                       issuer:
                         description: |-
                           A JSON Web Token (JWT) issuer URI. issuer must start with https:// and // be a valid
-                          with length <2000 characters. For example: https://container.googleapis.com/v1/projects/my-project/locations/us-west1/clusters/my-cluster (must be locations rather than zones).googleapis.com/v1/${google_container_cluster.my-cluster.id}".
+                          with length <2000 characters. For example: https://container.googleapis.com/v1/projects/my-project/locations/us-west1/clusters/my-cluster.googleapis.com/v1/${google_container_cluster.my-cluster.id}".
                         type: string
                     type: object
                   endpoint:
@@ -732,7 +732,7 @@ spec:
                           resourceLink:
                             description: |-
                               Self-link of the GCP resource for the GKE cluster.
-                              For example: //container.googleapis.com/projects/my-project/zones/us-west1-a/clusters/my-cluster.
+                              For example: //container.googleapis.com/projects/my-project/locations/us-west1-a/clusters/my-cluster.
                               It can be at the most 1000 characters in length.googleapis.com/${google_container_cluster.my-cluster.id}" or
                               google_container_cluster.my-cluster.id.
                             type: string
@@ -854,7 +854,7 @@ spec:
                       issuer:
                         description: |-
                           A JSON Web Token (JWT) issuer URI. issuer must start with https:// and // be a valid
-                          with length <2000 characters. For example: https://container.googleapis.com/v1/projects/my-project/locations/us-west1/clusters/my-cluster (must be locations rather than zones).googleapis.com/v1/${google_container_cluster.my-cluster.id}".
+                          with length <2000 characters. For example: https://container.googleapis.com/v1/projects/my-project/locations/us-west1/clusters/my-cluster.googleapis.com/v1/${google_container_cluster.my-cluster.id}".
                         type: string
                     type: object
                   endpoint:
@@ -870,7 +870,7 @@ spec:
                           resourceLink:
                             description: |-
                               Self-link of the GCP resource for the GKE cluster.
-                              For example: //container.googleapis.com/projects/my-project/zones/us-west1-a/clusters/my-cluster.
+                              For example: //container.googleapis.com/projects/my-project/locations/us-west1-a/clusters/my-cluster.
                               It can be at the most 1000 characters in length.googleapis.com/${google_container_cluster.my-cluster.id}" or
                               google_container_cluster.my-cluster.id.
                             type: string
@@ -1146,7 +1146,7 @@ spec:
                       issuer:
                         description: |-
                           A JSON Web Token (JWT) issuer URI. issuer must start with https:// and // be a valid
-                          with length <2000 characters. For example: https://container.googleapis.com/v1/projects/my-project/locations/us-west1/clusters/my-cluster (must be locations rather than zones).googleapis.com/v1/${google_container_cluster.my-cluster.id}".
+                          with length <2000 characters. For example: https://container.googleapis.com/v1/projects/my-project/locations/us-west1/clusters/my-cluster.googleapis.com/v1/${google_container_cluster.my-cluster.id}".
                         type: string
                     type: object
                   effectiveLabels:
@@ -1168,7 +1168,7 @@ spec:
                           resourceLink:
                             description: |-
                               Self-link of the GCP resource for the GKE cluster.
-                              For example: //container.googleapis.com/projects/my-project/zones/us-west1-a/clusters/my-cluster.
+                              For example: //container.googleapis.com/projects/my-project/locations/us-west1-a/clusters/my-cluster.
                               It can be at the most 1000 characters in length.googleapis.com/${google_container_cluster.my-cluster.id}" or
                               google_container_cluster.my-cluster.id.
                             type: string
