--- a/package/crds/tags.gcp.upbound.io_tagkeys.yaml
+++ b/package/crds/tags.gcp.upbound.io_tagkeys.yaml
@@ -98,7 +98,7 @@ spec:
                   shortName:
                     description: |-
                       Input only. The user friendly name for a TagKey. The short name should be unique for TagKeys within the same tag namespace.
-                      The short name must be 1-63 characters, beginning and ending with an alphanumeric character ([a-z0-9A-Z]) with dashes (-), underscores (_), dots (.), and alphanumerics between.
+                      The short name can have a maximum length of 256 characters. The permitted character set for the shortName includes all UTF-8 encoded Unicode characters except single quotes ('), double quotes ("), backslashes (\), and forward slashes (/).
                     type: string
                 type: object
               initProvider:
@@ -139,7 +139,7 @@ spec:
                   shortName:
                     description: |-
                       Input only. The user friendly name for a TagKey. The short name should be unique for TagKeys within the same tag namespace.
-                      The short name must be 1-63 characters, beginning and ending with an alphanumeric character ([a-z0-9A-Z]) with dashes (-), underscores (_), dots (.), and alphanumerics between.
+                      The short name can have a maximum length of 256 characters. The permitted character set for the shortName includes all UTF-8 encoded Unicode characters except single quotes ('), double quotes ("), backslashes (\), and forward slashes (/).
                     type: string
                 type: object
               managementPolicies:
@@ -362,7 +362,7 @@ spec:
                   shortName:
                     description: |-
                       Input only. The user friendly name for a TagKey. The short name should be unique for TagKeys within the same tag namespace.
-                      The short name must be 1-63 characters, beginning and ending with an alphanumeric character ([a-z0-9A-Z]) with dashes (-), underscores (_), dots (.), and alphanumerics between.
+                      The short name can have a maximum length of 256 characters. The permitted character set for the shortName includes all UTF-8 encoded Unicode characters except single quotes ('), double quotes ("), backslashes (\), and forward slashes (/).
                     type: string
                   updateTime:
                     description: |-
