--- a/examples-generated/networkconnectivity/v1beta2/spoke.yaml
+++ b/examples-generated/networkconnectivity/v1beta2/spoke.yaml
@@ -18,6 +18,9 @@ spec:
     - excludeExportRanges:
       - 198.51.100.0/24
       - 10.10.0.0/16
+      includeExportRanges:
+      - 198.51.100.0/23
+      - 10.0.0.0/8
       uriSelector:
         matchLabels:
           testing.upbound.io/example-name: network
