orgpolicy: policy added parameters
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/orgpolicy/v1beta1/policy.yaml
+++ b/examples-generated/orgpolicy/v1beta1/policy.yaml
@@ -27,6 +27,7 @@ metadata:
   name: basic
 spec:
   forProvider:
+    deletionPolicy: DELETE
     name: id
     orgId: "123456789"
     projectId: id
