privateca: doc updates only
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/package/crds/privateca.gcp.upbound.io_certificateauthorities.yaml
+++ b/package/crds/privateca.gcp.upbound.io_certificateauthorities.yaml
@@ -2241,7 +2241,7 @@ spec:
                           Structure is documented below.
                         properties:
                           keyId:
-                            description: The value of the KeyId in lowercase hexidecimal.
+                            description: The value of the KeyId in lowercase hexadecimal.
                             type: string
                         type: object
                       x509Config:
@@ -2509,8 +2509,9 @@ spec:
                       is allowed.
                     type: boolean
                   desiredState:
-                    description: Desired state of the CertificateAuthority. Set this
-                      field to STAGED to create a STAGED root CA.
+                    description: |-
+                      Desired state of the CertificateAuthority. Set this field to STAGED to create a STAGED root CA.
+                      Possible values: ENABLED, DISABLED, STAGED.
                     type: string
                   gcsBucket:
                     description: |-
@@ -2863,7 +2864,7 @@ spec:
                           Structure is documented below.
                         properties:
                           keyId:
-                            description: The value of the KeyId in lowercase hexidecimal.
+                            description: The value of the KeyId in lowercase hexadecimal.
                             type: string
                         type: object
                       x509Config:
@@ -3131,8 +3132,9 @@ spec:
                       is allowed.
                     type: boolean
                   desiredState:
-                    description: Desired state of the CertificateAuthority. Set this
-                      field to STAGED to create a STAGED root CA.
+                    description: |-
+                      Desired state of the CertificateAuthority. Set this field to STAGED to create a STAGED root CA.
+                      Possible values: ENABLED, DISABLED, STAGED.
                     type: string
                   gcsBucket:
                     description: |-
@@ -3591,7 +3593,7 @@ spec:
                           Structure is documented below.
                         properties:
                           keyId:
-                            description: The value of the KeyId in lowercase hexidecimal.
+                            description: The value of the KeyId in lowercase hexadecimal.
                             type: string
                         type: object
                       x509Config:
@@ -3865,8 +3867,9 @@ spec:
                       is allowed.
                     type: boolean
                   desiredState:
-                    description: Desired state of the CertificateAuthority. Set this
-                      field to STAGED to create a STAGED root CA.
+                    description: |-
+                      Desired state of the CertificateAuthority. Set this field to STAGED to create a STAGED root CA.
+                      Possible values: ENABLED, DISABLED, STAGED.
                     type: string
                   effectiveLabels:
                     additionalProperties:
