--- a/package/crds/privateca.gcp.upbound.io_certificates.yaml
+++ b/package/crds/privateca.gcp.upbound.io_certificates.yaml
@@ -2962,7 +2962,7 @@ spec:
                           Structure is documented below.
                         properties:
                           keyId:
-                            description: The value of the KeyId in lowercase hexidecimal.
+                            description: The value of the KeyId in lowercase hexadecimal.
                             type: string
                         type: object
                       x509Config:
@@ -3631,7 +3631,7 @@ spec:
                           Structure is documented below.
                         properties:
                           keyId:
-                            description: The value of the KeyId in lowercase hexidecimal.
+                            description: The value of the KeyId in lowercase hexadecimal.
                             type: string
                         type: object
                       x509Config:
@@ -4123,7 +4123,7 @@ spec:
                           items:
                             properties:
                               keyId:
-                                description: The value of the KeyId in lowercase hexidecimal.
+                                description: The value of the KeyId in lowercase hexadecimal.
                                 type: string
                             type: object
                           type: array
@@ -4311,7 +4311,7 @@ spec:
                           items:
                             properties:
                               keyId:
-                                description: The value of the KeyId in lowercase hexidecimal.
+                                description: The value of the KeyId in lowercase hexadecimal.
                                 type: string
                             type: object
                           type: array
@@ -4695,7 +4695,7 @@ spec:
                           Structure is documented below.
                         properties:
                           keyId:
-                            description: The value of the KeyId in lowercase hexidecimal.
+                            description: The value of the KeyId in lowercase hexadecimal.
                             type: string
                         type: object
                       x509Config:
