--- a/examples/redis/v1beta1/cluster.yaml
+++ b/examples/redis/v1beta1/cluster.yaml
@@ -10,6 +10,15 @@ metadata:
 spec:
   forProvider:
     authorizationMode: AUTH_MODE_DISABLED
+    deletionProtectionEnabled: false
+    maintenancePolicy:
+    - weeklyMaintenanceWindow:
+      - day: MONDAY
+        startTime:
+        - hours: 1
+          minutes: 0
+          nanos: 0
+          seconds: 0
     nodeType: REDIS_SHARED_CORE_NANO
     pscConfigs:
     - networkSelector:
